---
source: compiler/lume_parse/src/tests.rs
expression: "parse(Target :: Item,\n\"fn test<T1: Numeric + Floating, T2: Numeric + Floating>() -> void {}\")"
---
SOURCE_FILE@0..68
  FN@0..68
    SIG@0..66
      FN_KW@0..2 "fn"
      WHITESPACE@2..3 " "
      NAME@3..7
        IDENT@3..7 "test"
      BOUND_TYPES@7..55
        LESS@7..8 "<"
        BOUND_TYPE@8..30
          NAME@8..10
            IDENT@8..10 "T1"
          CONSTRAINTS@10..30
            COLON@10..11 ":"
            WHITESPACE@11..12 " "
            NAMED_TYPE@12..20
              PATH@12..20
                PATH_TYPE@12..20
                  NAME@12..19
                    IDENT@12..19 "Numeric"
                  WHITESPACE@19..20 " "
            ADD@20..21 "+"
            WHITESPACE@21..22 " "
            NAMED_TYPE@22..30
              PATH@22..30
                PATH_TYPE@22..30
                  NAME@22..30
                    IDENT@22..30 "Floating"
        COMMA@30..31 ","
        WHITESPACE@31..32 " "
        BOUND_TYPE@32..54
          NAME@32..34
            IDENT@32..34 "T2"
          CONSTRAINTS@34..54
            COLON@34..35 ":"
            WHITESPACE@35..36 " "
            NAMED_TYPE@36..44
              PATH@36..44
                PATH_TYPE@36..44
                  NAME@36..43
                    IDENT@36..43 "Numeric"
                  WHITESPACE@43..44 " "
            ADD@44..45 "+"
            WHITESPACE@45..46 " "
            NAMED_TYPE@46..54
              PATH@46..54
                PATH_TYPE@46..54
                  NAME@46..54
                    IDENT@46..54 "Floating"
        GREATER@54..55 ">"
      PARAM_LIST@55..57
        LEFT_PAREN@55..56 "("
        RIGHT_PAREN@56..57 ")"
      WHITESPACE@57..58 " "
      RETURN_TYPE@58..66
        ARROW@58..60 "->"
        WHITESPACE@60..61 " "
        NAMED_TYPE@61..66
          PATH@61..66
            PATH_TYPE@61..66
              NAME@61..65
                IDENT@61..65 "void"
              WHITESPACE@65..66 " "
    BLOCK@66..68
      LEFT_BRACE@66..67 "{"
      RIGHT_BRACE@67..68 "}"
